Fix for menu bar jumping on .hover
Adds one pixel of padding to non-hovered state.

--- a/sass/oscailte/custom/_styles.scss
+++ b/sass/oscailte/custom/_styles.scss
@@ -1,3 +1,7 @@
+.menu>li>a {
+  padding: 26px 20px;
+}
+
 .hero {
   background-position: 0 33%;
 }
